# MulticoreLanguageBenchmarks

./: .gitignore  README.md
openmp/create_destroy/: create_destroy.cpp
openmp/mandelbrot/: main.cpp
openmp/matrix_vector_mult/: main.cpp
openmp/removeduplicates/: parallel.cpp  script.sh  sequential.cpp
openmp/sorting/: parallel_sort.cpp
openmp/wordcount/: script.sh  wordcount_SP.cpp
openmp/wordcountcpp/: wordcount_parallel.cpp
rust/create_destroy/: Cargo.toml
rust/create_destroy/src/: main.rs
rust/mandelbrot/: Cargo.toml
rust/mandelbrot/src/: main.rs
rust/matrix_vector_mult/: Cargo.toml
rust/matrix_vector_mult/src/: main.rs
rust/removeduplicates/: Cargo.toml  try.sh
rust/removeduplicates/src/: main.rs  parallel.rs  parallelsplit.rs  sequential.rs
rust/sorting/: Cargo.toml
rust/sorting/parallelrustsort/: Cargo.toml
rust/sorting/parallelrustsort/src/: main.rs
rust/sorting/rustsort/: Cargo.toml
rust/sorting/rustsort/src/: main.rs
rust/sorting/src/: main.rs
rust/src/: main
rust/wordcount/: Cargo.toml  script.sh
rust/wordcount/src/: main.rs  parallel.rs  parallelsplit.rs  sequential.rs  test.rs  worked.rs
