[package]
name = "removeduplicates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sequential"
path = "src/sequential.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
rayon = "1.5.0"


