[package]
name = "removeduplicates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sequential"
path = "src/sequential.rs"

[[bin]]
name = "parallel"
path = "src/parallel.rs"

[[bin]]
name = "parallelsplit"
path = "src/parallelsplit.rs"

[[bin]]
name = "psbenchmark"
path = "src/benchmarkParallelSplit.rs"

[[bin]]
name = "pbenchmark"
path = "src/benchmarkParallel.rs"

[[bin]]
name = "sbenchmark"
path = "src/benchmarkSequential.rs"

[dependencies]
rayon = "1.5.0"
csv = "1.1.6"


