[package]
name = "wordcount"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sequential"
path = "src/sequential.rs" 

[[bin]]
name = "parallel"
path = "src/parallel.rs"

[[bin]]
name = "parallelsplit"
path = "src/parallelsplit.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
try-catch = "0.2.2"

